updates to projects

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL=postgres://username:password@localhost:5432/curriculum_tracker?sslmode=disable
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 PORT=8080
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+ENVIRONMENT=development
